WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155181
Regexp matching should incur less call overhead
https://bugs.webkit.org/show_bug.cgi?id=155181
Summary
Regexp matching should incur less call overhead
Filip Pizlo
Reported
2016-03-08 11:58:13 PST
Patch forthcoming.
Attachments
work in progress
(38.23 KB, patch)
2016-03-08 11:58 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(42.81 KB, patch)
2016-03-08 12:14 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
patch for landing
(42.83 KB, patch)
2016-03-08 12:32 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-03-08 11:58:42 PST
Created
attachment 273310
[details]
work in progress
Filip Pizlo
Comment 2
2016-03-08 12:14:22 PST
Created
attachment 273313
[details]
the patch
WebKit Commit Bot
Comment 3
2016-03-08 12:16:55 PST
Attachment 273313
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/RegExpObjectInlines.h:29: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:26: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:186: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:187: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:199: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:200: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:201: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:203: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] Total errors found: 8 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4
2016-03-08 12:18:25 PST
Comment on
attachment 273313
[details]
the patch r=me
Filip Pizlo
Comment 5
2016-03-08 12:32:38 PST
Created
attachment 273316
[details]
patch for landing Includes a fix for one of the Mozilla tests. It was a typo in handling lastIndex.
WebKit Commit Bot
Comment 6
2016-03-08 12:34:55 PST
Attachment 273316
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/RegExpObjectInlines.h:29: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:26: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:186: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:187: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:199: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:200: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:201: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/runtime/RegExpInlines.h:203: Wrong number of spaces before statement. (expected: 16) [whitespace/indent] [4] Total errors found: 8 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 7
2016-03-08 13:15:12 PST
Landed in
http://trac.webkit.org/changeset/197796
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug